Fixing code overflow when browser width is small

--- a/wavefile.css
+++ b/wavefile.css
@@ -267,6 +267,7 @@ span.label {
   pre {
     margin-left: 1.5em;
     margin-right: 1.5em;
+    overflow: scroll;
   }
 
   .doc-list {
